--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Listado</string>
+    <string name="bienvenida">Bienvenido</string>
+    <string name="registrar">Registrar</string>
+    <string name="consultar">Consultar</string>
 </resources>
