Se genera la navegación entre activity

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -8,4 +8,5 @@
     <string name="nombre">Name</string>
     <string name="correo">Email</string>
     <string name="telefono">Phone</string>
+    <string name="guardar">Save</string>
 </resources>
