Se agregan las opciones del spinner, y a su vez ya se guardan lo que se escribe en los text view

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -9,4 +9,8 @@
     <string name="correo">Email</string>
     <string name="telefono">Phone</string>
     <string name="guardar">Save</string>
+    <string name="entretenimiento">Entertainment</string>
+    <string name="automotriz">Automotive</string>
+    <string name="alimenticio">Food</string>
+    <string name="farmaceutico">Pharmacist</string>
 </resources>
