--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="error">Dato necesario</string>
     <string name="errorTel">Número inválido</string>
     <string name="errorCor">Correo inválido</string>
+    <string name="correcto">Éxito al guardar</string>
+    <string name="tipo">Tipo</string>
 </resources>
