Funciona lo principal, faltan cosas de diseño.

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -20,4 +20,5 @@
     <string name="tipo">Type</string>
     <string name="archivo">datos.txt</string>
     <string name="imageView">No content</string>
+    <string name="toastMensaje">"The company id is: "</string>
 </resources>
