--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="registrar">Registrar</string>
     <string name="consultar">Consultar</string>
     <string name="regresar">Regresar</string>
-    <string name="nombre">Nombre</string>
+    <string name="nombre">Nombre de la empresa</string>
     <string name="correo">Correo Electrónico</string>
     <string name="telefono">Teléfono</string>
     <string name="guardar">Guardar</string>
