--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,12 @@
     <string name="empresa">Registra la empresa</string>
     <string name="borrar">Borrar registros</string>
     <string name="mensaje">Registros borrados</string>
+    <string name="positivo">Regresar</string>
+    <string name="negativo">Registrar</string>
+    <string name="alDiaMen">No hay elementos a mostrar</string>
+    <string name="importante">¡Importante!</string>
+    <string name="si">Si</string>
+    <string name="no">No</string>
+    <string name="pregunta">Se van a eliminar los registros. ¿Deseas continuar?</string>
+    <string name="mensajeNo">No se borraron los registros</string>
 </resources>
