Se agrega la opción de modificar algún registro ya guardado.

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -34,4 +34,7 @@
     <string name="pregunta">The records will be deleted. Do you want to continue?</string>
     <string name="mensajeNo">Records not deleted</string>
     <string name="maquina">machine</string>
+    <string name="editar">Do you want to modify the registry?</string>
+    <string name="modificar">Modify item</string>
+    <string name="eliminar">Delete Record</string>
 </resources>
